// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product card test rendered with image and price symbol 1`] = `
<DocumentFragment>
  <div
    class="product-card"
  >
    <div
      class="product-card__text"
    >
      <h2
        class="product-card__name"
      >
        IPhone 14 Pro
      </h2>
      <div
        class="product-card__description"
      >
        Latest iphone, buy it now
      </div>
      <h1
        class="product-card__price"
      >
        999 $
      </h1>
      <div
        class="product-card__category"
      >
        Электроника
      </div>
    </div>
    <img
      alt="IPhone 14 Pro"
      class="product-card__image"
      src="/iphone.png"
    />
  </div>
</DocumentFragment>
`;

exports[`Product card test rendered without default symbol 1`] = `
<DocumentFragment>
  <div
    class="product-card"
  >
    <div
      class="product-card__text"
    >
      <h2
        class="product-card__name"
      >
        Настольная лампа
      </h2>
      <div
        class="product-card__description"
      >
        Говорят, что ее использовали в pixar
      </div>
      <h1
        class="product-card__price"
      >
        699 ₽
      </h1>
      <div
        class="product-card__category"
      >
        Для дома
      </div>
    </div>
    <img
      alt="Настольная лампа"
      class="product-card__image"
      src="/lamp.png"
    />
  </div>
</DocumentFragment>
`;

exports[`Product card test rendered without image 1`] = `
<DocumentFragment>
  <div
    class="product-card"
  >
    <div
      class="product-card__text"
    >
      <h2
        class="product-card__name"
      >
        Костюм гуся
      </h2>
      <div
        class="product-card__description"
      >
        Запускаем гуся, работяги
      </div>
      <h1
        class="product-card__price"
      >
        1 000 ₽
      </h1>
      <div
        class="product-card__category"
      >
        Одежда
      </div>
    </div>
  </div>
</DocumentFragment>
`;
